# CPP-AROIS

./: .gitmodules  Info  README.md
Man-in-the-middle-demo/: .gitignore  CMakeLists.txt
Man-in-the-middle-demo/src/: CMakeLists.txt  Client.cpp  Eva.cpp  Server.cpp
Man-in-the-middle-demo/src/Executable/: Client.cpp  Eva.cpp  Server.cpp
Man-in-the-middle-demo/src/Interface/: Interface.hpp
Man-in-the-middle-demo/src/Interface/Implant/: Implant.hpp
Man-in-the-middle-demo/src/Interface/Network/: Network.hpp
Man-in-the-middle-demo/src/Interface/OpenSSL/: OpenSSL.h
TestingTheServer/: Description  client_attack.py  implant_server.py  logging_tool.py
